fix: resolve database connection and character CRUD persistence